# ZPE-IMC

./: .gitignore  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md
code/: .gitignore  README.md  pyproject.toml
code/benchmarks/: run_benchmarks.py
code/benchmarks/artifacts/: BENCHMARK_REPORT.md  HOTSPOT_PROFILE.md
code/benchmarks/scenarios/: emoji_heavy.json  long_text.json  multilingual.json  multimodal.json  short_text.json
code/data/emoji/: emoji_primitives_v2a.json
code/examples/: multimodal_roundtrip.py  quickstart.py  single_modality_text.py
code/fixtures/: taste_promoted_events.json  taste_roundtrip_results.json
code/rust/imc_kernel/: Cargo.toml  build.rs  build_install.sh  build_install_pgo.sh
code/rust/wasm_codec/: Cargo.toml
code/scripts/: bootstrap_and_test.sh
code/scripts/container_shims/: determinism_probe.py  voice_groundtruth_optional_tools.py
code/source/: __init__.py
code/tests/: __init__.py  test_adapter_parity_matrix.py  test_all_modality_stream.py  test_cli_surface.py  test_collision_adversarial.py  test_cross_modal_roundtrip.py  test_cross_runtime_conformance.py  test_determinism_probe_canonical.py  test_examples_smoke.py  test_fidelity_battery.py  test_helper_api_dirty_hardening.py  test_hf_adapter.py  test_hf_pretrained_local.py  test_image_dual_dispatch_transplant.py  test_imc_rust_kernel_native.py  test_integrated_fidelity.py  test_regression_battery.py  test_sensation_regression.py  test_stream_analysis.py  test_streaming_encoder.py  test_taste_integration_replay.py  test_triton_ensemble_config.py  test_triton_repo_layout.py  test_triton_repo_layout_operator.py  test_voice_groundtruth_optional_adapter.py  test_voice_optional_tools.py  test_wasm_interface_contract.py  test_wave1_quality_gates.py  test_ws1_runtime_integrity.py
code/tests_phase3/diagram_image/: test_diagram_augmented.py
code/tests_phase3/mental/: test_mental_augmented.py
code/tests_phase3/music_voice/: test_audio_augmented.py
code/tests_phase3/smell/: test_smell_augmented.py
code/tests_phase3/text_emoji/: test_text_emoji_augmented.py
code/tests_phase3/touch/: test_touch_augmented.py
code/wasm/: README.md  package.json
code/wasm/pkg/: package.json  zpe_wasm_codec.d.ts  zpe_wasm_codec.js  zpe_wasm_codec_bg.wasm  zpe_wasm_codec_bg.wasm.d.ts
code/wasm/scripts/: generate_wasm_parity_metrics.py  run_contract.mjs
code/wasm/src/: index.js
code/zpe_multimodal/: __init__.py  canonical_demo.py  cli.py  streaming.py  tokenizer.py
code/zpe_multimodal/adapters/: huggingface.py
code/zpe_multimodal/core/: __init__.py  codec.py  imc.py  imc_native.py
code/zpe_multimodal/data/: mapping_v1.json  (+1 more)
(+112 files in other folders)
