[package]
# Governed by the repository root LICENSE (SAL v6.0); use an SPDX-style
# identifier here so fresh wheel installs do not depend on a path outside the
# crate root.
name = "zpe_imc_kernel"
version = "0.1.0"
edition = "2021"
publish = false
license = "LicenseRef-Zer0pa-SAL-6.0"
description = "Native Rust IMC stream scanner for the ZPE multimodal runtime"

[lib]
name = "zpe_imc_kernel"
crate-type = ["cdylib"]

[dependencies]
bumpalo = { version = "3", features = ["collections"] }
mimalloc = { version = "0.1", default-features = false }
phf = { version = "0.11", features = ["macros"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }
rayon = "1.10"
unicode-normalization = "0.1"

[build-dependencies]
serde_json = "1"

[package.metadata.maturin]
name = "zpe_imc_kernel"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
overflow-checks = false
